--- a/app/views/movies/index.html.haml
+++ b/app/views/movies/index.html.haml
@@ -4,9 +4,11 @@
 %table#movies
   %thead
     %tr
-      %th Movie Title
+      -#%th Movie Title ======================================================================9:50
+      %th{:class=>("hilite" if @sort_column =="title")}= link_to 'Movie Title', movies_path(:sort_by=>'title'), :id=>"title header"
       %th Rating
-      %th Release Date
+      -#%th Release Date
+      %th{:class=>("hilite" if @sort_column =="release_date")}= link_to 'Release Date', movies_path(:sort_by=>'release_date'), :id=>"release_date_header"
       %th More Info
   %tbody
     - @movies.each do |movie|
