--- a/app/views/movies/index.html.haml
+++ b/app/views/movies/index.html.haml
@@ -1,14 +1,22 @@
 -#  This file is app/views/movies/index.html.haml
 %h1 All Movies
 
+= form_tag movies_path, :id=>"ratings_form", :method => :get do
+  Include:
+  - @all_ratings.each do |rating|
+    = rating
+    = check_box_tag "ratings[#{rating}]", :id=>"ratings_#{rating}]", 1=>(true if @set_ratings[rating])
+    -#= check_box_tag "ratings[#{rating}]", :id=>"ratings_#{rating}]" -#ALTERNATE CODE
+  = submit_tag 'Refresh', :id=>"ratings_submit"
+
 %table#movies
   %thead
     %tr
-      -#%th Movie Title ======================================================================9:50
-      %th{:class=>("hilite" if @sort_column =="title")}= link_to 'Movie Title', movies_path(:sort_by=>'title'), :id=>"title header"
+      -#%th Movie Title ======================================================================Part 1: 9:50
+      %th{:class=>("hilite" if @sort_column =="title")}= link_to 'Movie Title', movies_path(:sort_by=>'title', :ratings=>@set_ratings), :id=>"title header"
       %th Rating
-      -#%th Release Date
-      %th{:class=>("hilite" if @sort_column =="release_date")}= link_to 'Release Date', movies_path(:sort_by=>'release_date'), :id=>"release_date_header"
+      -#%th Release Date -#Part 1
+      %th{:class=>("hilite" if @sort_column =="release_date")}= link_to 'Release Date', movies_path(:sort_by=>'release_date', :ratings=>@set_ratings), :id=>"release_date_header"
       %th More Info
   %tbody
     - @movies.each do |movie|
